@@ -1792,6 +1792,11 @@ gc_file_buffers_and_nodes (void)
           if (fb->flags & N_CannotGC)
             continue;
 
+          /* Don't free file buffers corresponding to files that aren't there 
+             any more, because a node may still refer to them. */
+          if (fb->flags & N_Gone)
+            continue;
+
           free (fb->contents);
           fb->contents = 0;
 
